--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,11 @@
-default: 
-  tags:
-    - kubernetes
- 
+default:  
   image: ubuntu:20.04
 
   before_script:
     - export DEBIAN_FRONTEND=noninteractive 
     - apt-get update
     - apt-get upgrade -y
-    - apt-get install -y build-essential cmake libvtk7-dev libfmt-dev clang-format-11 unifdef
+    - apt-get install -y build-essential cmake libvtk7-dev libfmt-dev clang-format unifdef
 
 check-format-job:
   stage: build
